--- a/inst/rmarkdown/templates/rmd_template.cellid/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/rmd_template.cellid/skeleton/skeleton.Rmd
@@ -296,6 +296,8 @@ load("01-segmentation_results.Rdata")
 
 ### Advanced tools
 
+#### Cell Magick
+
 You may want to check out the Shiny/Magick rcell2 analisys package!
 
 It provides functions to manipulate images of single cells into strips, mosaics,
@@ -449,7 +451,7 @@ with `rcell2`'s defaults. See `?rename_mda` for extra options.
 The defaults are useful for a three channel experiment, 
 and file names looking like this: `far6_w2LED-BF--YFPcube--cam_s7_t2.TIF`.
 
-#### Preview
+#### Rename a single file
 
 A preview of how files will be renamed can be generated:
 
@@ -514,7 +516,7 @@ List all files in the images directory to inspect the result:
 dir(images.path, recursive = T)
 ```
 
-#### Rename all
+#### Rename all files
 
 To run the function on all images, provide the path to the images directory.
 
@@ -535,6 +537,77 @@ To use the function with different file name patterns, adjust `identifier.patter
 > Note that the `ch` field in `channel.maping.df` must match exactly the
 > text captured by the channel group in the `identifier.pattern` regex.
 > Read the function's help page for details: `?rename_mda`.
+
+#### Join multiple MDA runs
+
+In some setups, you might end up with several image sets, from consecutive MDAs.
+
+The full list of images can recovered and renamed to form a single image set for Cell-ID.
+
+```{r}
+result <- rename_mda(images.path = data.dir,
+                     # Set the rename function to NULL to disable renaming.
+                     rename.function = NULL,
+                     # Example pattenrs:
+                     identifier.pattern=".*_w(\\d).*_s(\\d{1,2})_t(\\d{1,2}).TIF$",
+                     identifier.info = c("ch", Position="pos", time="t.frame"),
+                     channel.maping.df = data.frame(ch = 1:4, 
+                                                    ch.name = c("TFP", "BF", "RFP", "YFP")))
+
+result
+```
+
+The above list contains all images, which differ only by a prefix in their file names.
+
+The script below extracts an integer identifier from that prefix into a new `exp.group` column.
+
+The images are then grouped by `exp.group` and stage position index, and a new `t.frame` column is created (overriding the old one). Finally a new 
+
+```{r}
+rename.df <-
+  result$status |> 
+  mutate(ch=as.integer(ch)) |> 
+  mutate(pos=as.integer(pos)) |> 
+  mutate(t.frame=as.integer(t.frame)) |> 
+  mutate(exp.group = basename(file) |> sub(pattern="^focus(\\d+)_.*", replacement="\\1") |> as.integer()) |> 
+  # Recreate time frame column.
+  arrange(ch, pos, exp.group, t.frame) |> 
+  group_by(ch, pos) |> 
+  mutate(t.frame = 1:n()) |> 
+  # Recreate the new file name for each image.
+  mutate(rename.file = paste0(ch.name, 
+                              "_Position", str_pad(pos, width=2, side = "left", pad = "0"),
+                              "_time", str_pad(t.frame, width=2, side = "left", pad = "0"),
+                              ".tif")) |> 
+  # Clean up.
+  select(-exp.group)
+```
+
+Quick review: in this plot, the total number of images in each channel and position is shown.
+
+```{r}
+rename.df |> unique() |> 
+  group_by(ch, pos) |> 
+  summarise(n_frames=n()) |> 
+  ggplot() +
+  geom_tile(aes(ch, pos, fill=n_frames)) +
+  theme_minimal()
+```
+
+You can now use this new `rename.df` data frame and `rename_mda` to rename the 
+multiple MDA series into a single series for Cell-ID.
+
+```{r}
+result <- rename_mda(images.path = data.dir, 
+                     rename.dataframe = rename.df,
+                     channel.maping.df = data.frame(ch = 1:4, ch.name = c("TFP", "BF", "RFP", "YFP")))
+```
+
+The renamed images are here:
+
+```{r}
+result[["rename.path"]]
+```
 
 ## Preprocessing
 
